bugs.txt
In file included from main.cpp:1:
os_interface.cpp: In function 'bool accept_input(std::string, ScreenSession*)':
os_interface.cpp:590:19: error: call of overloaded 'new_screen(std::string&)' is ambiguous
  590 |         new_screen(name);
      |         ~~~~~~~~~~^~~~~~
os_interface.cpp:590:19: note: there are 2 candidates
os_interface.cpp:50:6: note: candidate 1: 'void new_screen(const std::string&)'
   50 | void new_screen(const std::string& name);
      |      ^~~~~~~~~~
os_interface.cpp:431:6: note: candidate 2: 'void new_screen(std::string)'
  431 | void new_screen(std::string name) {
      |      ^~~~~~~~~~
os_interface.cpp:613:16: error: 'curr' was not declared in this scope
  613 |         while (curr) {
      |                ^~~~
os_interface.cpp:626:7: error: 'else' without a previous 'if'
  626 |     } else if (choice == "^g") {
      |       ^~~~